# hello_CMakeLists_C_C-_SOER

./: CMakeLists.txt  README.md  hello.c
lib/: hello.cpp
